@@ -10,6 +10,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Working build suite page
 - phoromatic: Add support for local suites page
 - phoromatic: Add benchmark page
+- phoromatic: Add support for viewing issued benchmark tickets
 
 Phoronix Test Suite 5.6 Milestone 2
 4 February 2015
